landing page mostly done

--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -1,19 +1,45 @@
+@font-face {
+  font-family: Motiva Sans;
+  src: url("../../public/fonts/Motiva-Sans-Light.ttf");
+}
+
 .landingPageWrapper {
     height: 100vh;
     width: 100vw;
 }
 
-#navarea {
-  font-family: "Motiva Sans", Sans-serif;
+#nav {
+  background: #171a21;
   display: flex;
   justify-content: center;
+}
+
+#navarea {
+  position: relative;
+  width: 940px;
+  height: 104px;
+  margin: 0px auto;
+  z-index: 402;
+  display: flex;
   align-items: center;
   font-weight: normal;
   font-size: 14px;
-  height: 13vh;
-  width: 100%;
   background: #171a21;
   color: #E9E9E9;
+}
+
+#div_logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 40px;
+  width: 176px;
+  height: 44px;
+}
+
+.nav_nav {
+  padding: 7px 7px;
+  font-weight: 500;
 }
 
 #logo {
@@ -22,6 +48,10 @@
 }
 
 #navbar {
+  display: flex;
+  justify-content: space-around;
+  font-family: "Motiva Sans", Sans-serif;
+  color: #b8b6b4;
   margin: 25px;
 }
 
@@ -29,6 +59,10 @@
   position: absolute;
   top: 5px;
   right: 5px;
+}
+
+#join_pc {
+  width: 320px;
 }
 
 #page_content {
@@ -71,6 +105,30 @@
   outline: none;
   font-family: "Motiva Sans", Sans-serif;
   font-weight: normal;
+}
+
+#signup {
+  font-family: "Motiva Sans", Sans-serif;
+  padding: 100px 0 0;
+  font-size: 14px;
+  text-align: center;
+}
+
+#join_vapor {
+  padding: 0 15px;
+  font-size: 15px;
+  line-height: 30px;
+  color: #E9E9E9;
+  display: block;
+  background: transparent;
+  border: 1px solid rgba(255,255,255,0.4);
+  border-radius: 2px;
+}
+
+#signup_button {
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
 }
 
 /* * {
