--- a/react-app/src/components/auth/index.css
+++ b/react-app/src/components/auth/index.css
@@ -14,7 +14,7 @@
     justify-content: center;
     max-width: 300px;
     border-radius: 3px;
-    color: #E9E9E9;
+    color: #b8b6b4;
     padding: 8px 6px;
     display: block;
     box-shadow: none;
