--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -53,6 +53,7 @@
   font-family: "Motiva Sans", Sans-serif;
   color: #b8b6b4;
   margin: 25px;
+  letter-spacing: .5px;
 }
 
 #loginnav {
@@ -82,6 +83,7 @@
   font-weight: normal;
   font-size: 12px;
   padding: 40px 20px 20px 20px;
+  background: radial-gradient(30% 40% at 40% 30%, rgba(33, 36, 41, .5) 0%, rgba(33, 36, 41, 0) 100%) #2124296e;
 }
 
 #signintext {
@@ -129,6 +131,21 @@
   display: flex;
   justify-content: center;
   padding-top: 15px;
+}
+
+#footer {
+  font-family: Arial, Helvetica, sans-serif;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 16px 0 60px 0;
+  margin: 0;
+  background: #171a21;
+  color: #8F98A0;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
 }
 
 /* * {
