--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Motiva Sans;
+  src: url("../public/fonts/Motiva-Sans-Bold-Italic.ttf");
+}
+
 #modal {
     position: fixed;
     top: 0;
@@ -9,21 +14,67 @@
     align-items: center;
   }
 
-  #modal-background {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
+#modal-background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
 
-  #modal-content {
-    position: absolute;
-    font-size: 20px;
-    background-color:white;
-    padding: 3px;
-    border-radius: 10px;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-    margin: auto;
-  }
+#modal-content {
+  position: absolute;
+  font-size: 20px;
+  background-color:#2b2e35;
+  padding: 0px;
+  width: 715px;
+  height: 220px;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  margin: auto;
+  color: #acb2b8;
+}
+
+#top-modal-div {
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(to right, #00ccff, #3366ff);
+  margin: 0;
+  padding: 0;
+}
+
+.error-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 15px;
+}
+
+.error-modal > div {
+  margin-bottom: 5px;
+}
+
+.modal-content-text {
+  margin: 30px 30px;
+}
+
+.modal-content-text > h2 {
+  color: white;
+}
+
+.modal-content-bttn-ok {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal-content-bttn-ok > span {
+  background-color: 363a43;
+  color: white;
+  padding: 0 15px;
+  font-size: 15px;
+  line-height: 30px;
+  -moz-box-shadow: 0 0 3px rgb(19, 18, 18);
+  -webkit-box-shadow: 0 0 3px rgb(3, 3, 3);
+  box-shadow: 0 0 3px rgb(0, 0, 0);
+  cursor: pointer;
+}
