messing with modal styling

--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -28,8 +28,8 @@
   font-size: 20px;
   background-color:#2b2e35;
   padding: 0px;
-  width: 715px;
-  height: 220px;
+  /* width: 715px;
+  height: 220px; */
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
   margin: auto;
   color: #acb2b8;
