--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -5,7 +5,7 @@
 
 .whole-page {
   display: block;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 0;
   margin: 0;
 }
@@ -52,7 +52,7 @@
 
 .cart-item-container {
   /* border: solid 2px black; */
-  margin: 5px 10px;
+  margin: 3px 10px;
   background-color: rgba(0,0,0,0.2);
 }
 
