--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -118,7 +118,6 @@
     padding-top: 20px;
     padding-bottom: 40px;
     right: 100px;
-    z-index: auto;
 }
 
 #game_img_carousel {
@@ -142,7 +141,6 @@
     display: flex;
     height: 353px;
     overflow: hidden;
-    box-shadow: 2px 2px 7px 0px #000, 2px 2px 7px 2px #000;
 }
 
 #game_image_carousel {
@@ -150,10 +148,16 @@
     height: 100%;
 }
 
+#game_info_div {
+
+}
+
 #game_image_main {
     width: 616px;
     height: 353px;
-    z-index: 2;
+    z-index: 4;
+    box-shadow: 2px 2px 7px 0px #000, 2px 2px 7px 2px #000;
+    box-shadow: 0 0 10px 5px #000;
 }
 
 #game_title {
@@ -236,4 +240,26 @@
 
 a {
     text-decoration: none;
+}
+
+#next_button_div {
+    display: flex;
+    justify-content: center;
+    width: 45px;
+    height: 108px;
+    position: absolute;
+    bottom: 99px;
+    right: -45px;
+    background-color: rgba(0,0,0,0.3);
+}
+
+#prev_button_div {
+    position: absolute;
+    top: 171px;
+    left: -46px;
+    display: flex;
+    justify-content: center;
+    width: 45px;
+    height: 108px;
+    background-color: rgba(0,0,0,0.3);
 }
