--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -21,6 +21,7 @@
 .header-content {
  padding-bottom: 64px;
  margin-bottom: -30px;
+ background: url('../../public/images/background-header.png') bottom center;
 }
 
 .header-content h2 {
