--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -157,7 +157,7 @@
 
 #footer {
   font-family: Arial, Helvetica, sans-serif;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
