--- a/react-app/src/components/Games/GameImages.css
+++ b/react-app/src/components/Games/GameImages.css
@@ -24,6 +24,65 @@
     cursor: pointer;
     color: red;
 }
-/* #modal-content{
-    height: 500px;
-} */
+
+
+
+/* delete-gameimage-form css*/
+
+.image-text-container{
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+}
+
+#delete-gameImage-form{
+    height: 200px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+}
+
+.delete-gameImage-btns{
+    display: flex;
+    flex-direction: row;
+    align-self: flex-end;
+}
+
+
+#delete-images{
+    background-color: #a4d007;
+    background: -webkit-linear-gradient( top, #32363f 5%, #588a1b 95%);
+    background: linear-gradient( to bottom, #32363f 5%, #588a1b 95%);
+    background: linear-gradient( to right, #75b022 5%, #75b022 95%);
+    border: none;
+    border-radius: 2px;
+    color: white;
+    padding: 10px 10px;
+    font-size: 16px;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
+
+    margin-right: 15px;
+}
+
+#cancel-images{
+    background: #75b022;
+    background: -webkit-linear-gradient( top, #75b022 5%, #588a1b 95%);
+    background: linear-gradient( to bottom, #75b022 5%, #588a1b 95%);
+    background: linear-gradient( to right, #32363f 5%, #32363f 95%);
+    border: none;
+    border-radius: 2px;
+    color: white;
+    padding: 10px 10px;
+    font-size: 16px;
+
+    margin-right: 15px;
+
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
+}
+.delete-image-text{
+    font-family: "Motiva Sans", Sans-serif;
+    margin-left: 15px;
+}
+.delete-image-text.p-tag{
+    font-size: 16px;
+}
