--- a/react-app/src/components/Games/index.css
+++ b/react-app/src/components/Games/index.css
@@ -14,6 +14,7 @@
 #page-content-container {
   display: flex;
   flex-flow: column;
+  box-sizing: border-box;
   align-items: center;
   background-color: #1b2838;
   color: white;
