--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -233,6 +233,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  width: 972px;
   /* background-color: rgba( 164, 208, 7, 0.4 ); */
   margin-bottom: 5px;
 }
