--- a/react-app/src/components/Reviews/index.css
+++ b/react-app/src/components/Reviews/index.css
@@ -72,19 +72,22 @@ body {
   width: 948px;
   min-height: 948px;
   background: none;
-  background-image: linear-gradient(to bottom,#293c50, #101a22 40% );
+  background-image: linear-gradient(to bottom,#243445, #101a22 25% );
   background-repeat: no-repeat, repeat-y;
   background-position: bottom center, center;
   width: 926px;
   padding: 12px 12px 128px 12px;
+  border: 1px solid #101a22;
 }
 
 .review-detail-container {
-
+  max-width: 918px;
+  padding: 0 16px;
+  position: relative;
 }
 
-.review-content-subbody {
-  display: flex;
+.left-offset-review-content-subbody {
+  /* display: flex;
   flex-flow: column;
   align-items: center;
   background-color: #1b2838;
@@ -95,19 +98,49 @@ body {
   height: 444px;
   background-color: #0e0e0f42;
   align-items: flex-start;
-  padding: 5px;
+  padding: 5px; */
+  float: left;
+  width: 580px;
+  margin: 0;
+  padding: 0;
+  padding-right: 0px;
+
 }
 
 .recommendation-subbody {
   display: inline-flex;
 }
 
+
 .right-offset-detail-subbody {
-  display: flex;
+  /* display: flex;
   flex-flow: column;
-  background-image: linear-gradient(to bottom right,#5f5f5f00, #0000009c );
+
   min-width: 440px;
   color: white;
   text-decoration: none;
-  padding: 5px;
+  padding: 5px; */
+  /* background-image: linear-gradient(to bottom right,#5f5f5f00, #0000009c ); */
+  position: relative;
+  float: right;
+  width: 295px;
+  margin: 0;
+  padding: 0;
+  padding-top: 0px;
+  z-index: 20;
+  margin-bottom: 16px;
+  background-color: #101921;
+  padding-bottom: 6px;
+
+}
+
+.game_page_link {
+  color: #EBEBEB;
+  background-color: transparent;
+  display: inline-block;
+  padding: 5px 8px 5px 8px;
+  margin-right: 5px;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  cursor: pointer;
 }
