--- a/react-app/src/components/Games/GameImages.css
+++ b/react-app/src/components/Games/GameImages.css
@@ -16,10 +16,21 @@
     justify-content: space-around;
 }
 
-#delete-image-btn{
-    width: 100px;
-    height: 10px;
-    margin-left: 200px;
+.deleteImage{
+    background: linear-gradient( to right, #32363f 5%, #32363f 95%);
+    border: none;
+    border-radius: 3px;
+    color: white;
+    padding: 1px 10px;
+    font-size: 16px;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
+    margin-top: 25px;
+    height: 50px;
+    font-family: "Motiva Sans", Sans-serif;
+}
+.deleteImage:hover{
+    transition: none;
+    background: linear-gradient( to right, #d11a2a 5%, #d11a2a 95%);
 }
 
 /* new image-form */
