corrected review linking to other pages

--- a/react-app/src/components/Reviews/index.css
+++ b/react-app/src/components/Reviews/index.css
@@ -144,3 +144,10 @@ body {
   -moz-border-radius: 3px;
   cursor: pointer;
 }
+
+.owner_panel_title {
+  color: #81a313;
+  font-size: 11px;
+  text-transform: uppercase;
+  margin: 3px 0 10px 0;
+}
