--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -187,3 +187,9 @@
   padding: 5px 40px;
   text-align: center;
 }
+
+#is-active-total-bttns:hover {
+  color: #ffffff !important;
+  background: linear-gradient( to bottom, rgba(121,153,5,1) 100%, rgba(83,105,4,1) 95%);
+  opacity: 100%
+}
