--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -240,6 +240,7 @@
 
 #cart-button-div button {
   width: 100px;
-  box-shadow: 0 0 3px #000;
-  background-color: #a4d007;
+  box-shadow: 0 0 0px #000;
+  background: linear-gradient( to bottom, rgba(121,153,5,1) 100%, rgba(83,105,4,1) 95%);
+  color: #ffffff;
 }
