--- a/react-app/src/components/Reviews/index.css
+++ b/react-app/src/components/Reviews/index.css
@@ -16,7 +16,7 @@ body {
   height: 102px;
   margin: 0 auto;
   position: relative;
-  box-shadow: 0 0 8px black;
+  box-shadow: 0 0 20px black;
   z-index: 100;
 }
 .review-detail-container {
@@ -134,6 +134,10 @@ body {
 
 }
 
+.game-review-links {
+  background-color: #091016;
+}
+
 .game_page_link {
   color: #EBEBEB;
   background-color: transparent;
@@ -145,9 +149,54 @@ body {
   cursor: pointer;
 }
 
+.user-controls-container {
+  background: rgba(27,27,27,.36);
+  border-radius: 4px;
+  padding: 10px 10px 10px 11px;
+  margin: 0 0 10px 0;
+  margin-top: 20px;;
+  border: 1px solid #9bc318;
+  box-shadow: 1px 1px 0 0 #39393a;
+
+}
+
 .owner_panel_title {
   color: #81a313;
   font-size: 11px;
   text-transform: uppercase;
   margin: 3px 0 10px 0;
+}
+
+.owner_controls_divider {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: -10px;
+  margin-right: -10px;
+  height: 1px;
+  background-color: #000;
+  border-bottom: 1px solid #17212e;
+}
+
+.owner_panel_bttn {
+  text-decoration: none;
+  display: inline-block;
+  padding: 5px 8px 5px 8px;
+  margin-right: 5px;
+  border-radius: 3px;
+  cursor: pointer;
+  color: white;
+}
+
+.owner_action_img {
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+.left-offset-review-content-subbody {
+  float: left;
+  width: 580px;
+  margin: 0;
+  padding: 0;
+  padding-right: 0px;
+
 }
