--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -109,6 +109,8 @@
 }
 
 #carousel {
+    display: flex;
+    align-items: center;
     font-family: "Motiva Sans", Sans-serif;
     font-weight: 300;
     font-size: 14px;
@@ -118,6 +120,7 @@
     padding-top: 20px;
     padding-bottom: 10px;
     right: 100px;
+    min-width: 940px;
 }
 
 #game_img_carousel {
