--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -21,6 +21,7 @@
 .header-content {
  padding-bottom: 64px;
  margin-bottom: -30px;
+ padding-top: 80px;
  background: url('../../public/static/images/background-header.png') bottom center;
 }
 
@@ -134,6 +135,7 @@
   padding: 0px;
   height: 190px;
   box-shadow: 0 0 5px #000;
+  background: linear-gradient(to bottom, #758996 75%,#30588b 95%);
 }
 
 .right-content-divs img {
@@ -191,4 +193,51 @@
   color: #ffffff !important;
   background: linear-gradient( to bottom, rgba(121,153,5,1) 100%, rgba(83,105,4,1) 95%);
   opacity: 100%
+}
+
+.inside-div {
+  width: 100%;
+  height: 100%;
+}
+
+#removed-cart-item {
+  display: flex;
+  width: fit-content;
+  background-color: #758e9d;
+  color: #ffffff;
+  margin:3px 10px;
+  padding: 5px 10px;
+  font-family: "Motiva Sans", sans-serif;
+  font-weight: bold;
+  line-height: 29px;
+  font-size: 12px;
+}
+
+#after-purchase-modal-div {
+  width: 430px;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px 10px;
+  font-family: "Motiva Sans", sans-serif;
+}
+
+#item-in-purchase-title {
+  font-size: 26px;
+  color: #ffffff;
+}
+
+.item-in-purchase-modal {
+  padding: 5px 5px;
+  margin: auto auto;
+}
+
+#item-in-purchase-button a {
+  font-size: 17px;
+  padding: 10px 10px;
+  width: 100px;
+  box-shadow: 0 0 0px #000;
+  background: linear-gradient( to bottom, rgba(121,153,5,1) 100%, rgba(83,105,4,1) 95%);
+  color: #ffffff;
+  text-decoration: none;
 }
