reviews bug fixes

--- a/react-app/src/components/Reviews/index.css
+++ b/react-app/src/components/Reviews/index.css
@@ -173,7 +173,7 @@ body {
   margin-right: 10px;
 }
 
-.left-offset-review-content-subbody {
+#left-offset-review-content-subbody {
   float: left;
   width: 580px;
   margin: 0;
