--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -92,9 +92,37 @@
     margin-top: 5px;
 }
 
+.css-ohwg9z {
+    width: 100vw !important;
+}
+
 #main_content {
-    width: 940px;
-    height: 353px;
+    width: 1050px;
+    height: 380px;
+}
+
+a {
+    text-decoration: none;
+}
+
+#next_button_div {
+    padding: 36px 11px;
+    cursor: pointer;
+    background: linear-gradient( to right, rgba( 0, 0, 0, 0) 5%,rgba( 0, 0, 0, 0.3) 95%);
+}
+
+#prev_button_div {
+    padding: 36px 11px;
+    cursor: pointer;
+    background-color: rgba(0,0,0,0.3);
+}
+
+#next_button_div:hover {
+    background: -webkit-linear-gradient( left, rgba( 171, 218, 244, 0) 5%,rgba( 171, 218, 244, 0.3) 95%);
+}
+
+#prev_button_div:hover {
+    background: -webkit-linear-gradient( left, rgba( 171, 218, 244, 0) 5%,rgba( 171, 218, 244, 0.3) 95%);
 }
 
 #feature {
@@ -109,6 +137,8 @@
 }
 
 #carousel {
+    position: relative;
+    left: -49px;
     display: flex;
     align-items: center;
     font-family: "Motiva Sans", Sans-serif;
@@ -119,24 +149,11 @@
     background: none;
     padding-top: 20px;
     padding-bottom: 10px;
-    right: 100px;
-    min-width: 940px;
 }
 
 #game_img_carousel {
     width: 616px;
     height: 353px;
-    z-index: 10;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-size: cover;
-    background-position: center;
-    transition: opacity 300ms;
-}
-
-#carousel_content_main {
-    min-width: 940px;
 }
 
 #carousel_content {
@@ -149,14 +166,12 @@
     box-shadow: 0 0 7px 0px #000;
     overflow: hidden;
     box-shadow: 0 0 10px 5px #000;
-    min-width: 940px;
 }
 
 #game_image_carousel {
     width: 100%;
     height: 100%;
 }
-
 
 #game_image_main {
     width: 616px;
@@ -237,36 +252,6 @@
 
 #vapor_index_div:hover {
     box-shadow: 0 0 12px #66c0f4;
-}
-
-a {
-    text-decoration: none;
-}
-
-#next_button_div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45px;
-    height: 108px;
-    background: linear-gradient( to right, rgba( 0, 0, 0, 0) 5%,rgba( 0, 0, 0, 0.3) 95%);
-}
-
-#prev_button_div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45px;
-    height: 108px;
-    background-color: rgba(0,0,0,0.3);
-}
-
-#next_button_div:hover {
-    background: -webkit-linear-gradient( left, rgba( 171, 218, 244, 0) 5%,rgba( 171, 218, 244, 0.3) 95%);
-}
-
-#prev_button_div:hover {
-    background: -webkit-linear-gradient( left, rgba( 171, 218, 244, 0) 5%,rgba( 171, 218, 244, 0.3) 95%);
 }
 
 #game_list_content_container {
